# V3_EMA

./: .gitignore  CHANGELOG.md  README.en.md  README.md  config.py  pyproject.toml  requirements.txt
baselines/: baseline_buildings_v1.0.6.xlsx  baseline_buildings_v1.13.4.xlsx  baseline_buildings_v1.13.8.xlsx  baseline_buildings_v1.3.6.xlsx  baseline_buildings_v1.6.2.xlsx  baseline_buildings_v1.8.7.xlsx  baseline_buildings_v1.9.8.xlsx  baseline_regions_v1.0.6.xlsx  baseline_regions_v1.13.4.xlsx  baseline_regions_v1.13.8.xlsx  baseline_regions_v1.3.6.xlsx  baseline_regions_v1.6.2.xlsx  baseline_regions_v1.8.7.xlsx  baseline_regions_v1.9.8.xlsx
docs/: economics.en.md  economics.md  method.en.md  method.md
scripts/: gen_maps.sh  make_baseline.sh
tests/: test_demography.py  test_diff.py
v3_eat/: cli.py  game_root.py  i18n.py  model.py
v3_eat/analysis/: construction.py  diff.py  metrics.py  regions.py  rows.py
v3_eat/demography/: README.md  __init__.py  chart_svg.py  constants.py  experiments.py  game_modifiers.py  i18n.py  modifier_lookup.py  modifier_scan.py  report.py  rows.py  util.py
v3_eat/map/: __init__.py  countries.py  diff.py  html_viewer.py  metrics.py  render.py  timeline.py
v3_eat/output/: diff_writer.py  regions_diff_writer.py  regions_writer.py  xlsx_writer.py
v3_eat/parser/: pdx_parser.py  pdx_tokenizer.py  yml_loc.py
v3_eat/util/: logging.py
v3_ema/: cli.py  game_root.py  i18n.py  loader.py  model.py
v3_ema/analysis/: diff.py  regions.py  regions_diff.py
v3_ema/demography/: README.md  chart_svg.py  experiments.py  game_modifiers.py  i18n.py  model.py  modifier_lookup.py  report.py  scenarios.py
v3_ema/map/: __init__.py  colormap.py  diff.py  html_viewer.py  metrics.py  render.py  timeline.py  writer.py
v3_ema/output/: csv_writer.py  diff_writer.py  regions_diff_writer.py  regions_writer.py  xlsx_writer.py
v3_ema/util/: logging.py  progress.py  strings.py
