[project]
name = "v3_eat"
version = "0.5.0"
description = "Victoria 3 Econometrics Automation (V3_EAT): parses game script data and produces an Excel report of building/production-method economics."
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
# Resource choropleth maps (`regions map`): recolor provinces.png by per-state value.
# scipy is optional within this extra (only thickens national borders; degrades gracefully).
map = ["pillow>=10", "numpy>=1.24", "scipy>=1.10"]

[project.scripts]
v3-eat = "v3_eat.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["v3_eat*"]
